--- a/parcial1/parcial1.csproj
+++ b/parcial1/parcial1.csproj
@@ -83,5 +83,10 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="estudiantes.txt" />
+    <Content Include="libros.txt" />
+    <Content Include="prestamos.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
